# euphoric

./: .gitignore  App.js  BUILD_INSTRUCTIONS.md  DOCUMENTATION.md  app.json  eas.json  package-lock.json  package.json
modules/euphoric-audio/: expo-module.config.json  index.ts
modules/euphoric-audio/android/: CMakeLists.txt  build.gradle
modules/euphoric-audio/android/src/main/: AndroidManifest.xml
modules/euphoric-audio/android/src/main/cpp/: EuphoricAudioEngine.cpp  EuphoricAudioEngine.h  jni.cpp
modules/euphoric-audio/android/src/main/java/expo/modules/euphoricaudio/: EuphoricAudioModule.kt  EuphoricAudioService.kt  EuphoricAudioView.kt
modules/euphoric-audio/ios/: EuphoricAudio.podspec  EuphoricAudioModule.swift  EuphoricAudioView.swift
modules/euphoric-audio/src/: EuphoricAudio.types.ts  EuphoricAudioModule.ts  EuphoricAudioModule.web.ts  EuphoricAudioView.tsx  EuphoricAudioView.web.tsx
